# megapi

./: .dockerignore  .env_example  .gitignore  404.html  Dockerfile  README.md  app.py  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  populate.py  pyproject.toml  readme.md  requirements.txt  test.db  tests.py
.github/workflows/: deploy.yaml  deploy_aspire.yaml  deploy_pi.yaml  main.yaml  test.yaml
Buckets/.minio.sys/: format.json
core/: config.py  database.py  extract_openl3_embeddings.py
docs/: index.md
docs/endpoints/: auth.md  favorites.md  lyrics.md  milvus.md  minio.md  monitoring.md  music.md  openl3.md  spotinite.md  uploaded.md
docs/services/: auth.md  favorites.md  index.md  lyrics.md  milvus.md  minio.md  monitoring.md  openl3.md  spotinite.md  uploaded.md
endpoints/auth/: index.html
endpoints/favorites/: index.html
endpoints/lyrics/: index.html
endpoints/milvus/: index.html
models/: favorites.py  milvus.py  minio.py  music.py  openl3.py  playlist.py  spotinite.py  uploaded.py  users.py
routes/: auth.py  elo.py  favorites.py  lyrics.py  milvus.py  minio.py  monitoring.py  music.py  music_library.py  music_net.py  openl3.py  pi_monitoring.py  playlist.py  spotinite.py  uploaded.py
search/: search_index.json
services/: auth.py  favorites.py  index.html  lyrics.py  milvus.py  minio.py  monitoring.py  music.py  music_net.py  openl3.py  pi_monitoring.py  spotinite.py  uploaded.py
site/: 404.html  index.html  objects.inv
tests/: test_auth.py  test_favorites.py  test_files.py  test_migration.py  test_milvus.py  test_minio.py
(+43 files in other folders)
