[tool.poetry]
name = "megapi"
version = "0.1.0"
description = "awesome"
authors = ["Hatchi-Kin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
fastapi-login = "^1.10.0"
requests = "^2.31.0"
pymilvus = "^2.4.0"
pytest = "^8.1.1"
sqlalchemy = "^2.0.29"
bcrypt = "^4.1.2"
annotated-types = "^0.6.0"
async-generator = "^1.10"
attrs = "^23.2.0"
cffi = "^1.16.0"
click = "^8.1.7"
colorama = "^0.4.6"
dnspython = "^2.6.1"
email-validator = "^2.1.1"
exceptiongroup = "^1.2.0"
greenlet = "^3.0.3"
h11 = "^0.14.0"
idna = "^3.6"
mypy-extensions = "^1.0.0"
mypy = "^1.9.0"
outcome = "^1.3.0.post0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pycparser = "^2.21"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
sqlalchemy-stubs = "^0.4"
tomli = "^2.0.1"
typing-extensions = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
